--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="shortcut icon" href="/a.png" />
 
-    <title>React App</title>
+    <title>Counter App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
